# Rust-KNN-Binary-Image-Classification

./: Cargo.toml  README.md
src/: main.rs  model.rs  predict.rs  train.rs
