[package]
name = "image_classification"
version = "0.1.0"
edition = "2024"

[dependencies]
rust-cv = "0.1"      # Processamento de imagem e extração de features
smartcore = "0.4.0"    # Machine Learning
image = "0.25.6"       # Carregar imagens
ndarray = {version = "0.16.1", features = ["serde"]}     # Manipulação de dados numéricos

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"


clap = { version = "4.0", features = ["derive"] } # Para os Comandos do Main

#Logs e debug
log = "0.4"
env_logger = "0.10"